# nockchain

./: Cargo.toml
crates/nockchain/: Cargo.toml
crates/nockchain-bitcoin-sync/src/: main.rs
crates/nockchain/src/: mining.rs
