[workspace]
members = [
    "crates/nockchain"
]

[workspace.dependencies]
uuid = "1.8"
tempfile = "3"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
hoonc = { path = "crates/hoonc" }
kernels = { path = "crates/kernels" }
nockapp = { path = "crates/nockapp" }
nockvm = { path = "crates/nockvm" }
nockvm_macros = { path = "crates/nockvm_macros" }
nockchain-bitcoin-sync = { path = "crates/nockchain-bitcoin-sync" }
nockchain-libp2p-io = { path = "crates/nockchain-libp2p-io" }
equix = { path = "crates/equix" }
bs58 = "0.5"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
bitcoincore-rpc = "0.17"
libp2p = { version = "0.52", features = [
    "ping",
    "kad",
    "identify",
    "quic",
    "tls",
    "dns",
    "tokio",
    "macros",
    "request-response",
    "cbor"
] }
termcolor = "1.1"
tracing-test = "0.2"
zkvm-jetpack = { path = "crates/zkvm-jetpack" }
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
