[package]
name = "nockchain"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
# Workspace crates
hoonc.workspace = true
kernels = { workspace = true, features = ["dumb", "miner"] }
nockapp.workspace = true
nockchain-bitcoin-sync.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
bitcoincore-rpc.workspace = true
bs58.workspace = true
clap.workspace = true
equix.workspace = true
futures.workspace = true
libp2p = { workspace = true, features = [
    "ping",
    "kad",
    "identify",
    "quic",
    "tls",
    "dns",
    "tokio",
    "macros",
    "request-response",
    "cbor"
] }
nockchain-libp2p-io.workspace = true
tempfile.workspace = true
termcolor.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-test.workspace = true
uuid.workspace = true
zkvm-jetpack.workspace = true

# External crates required by your mining code
rayon = "1.8.0"
libc = "0.2.171"
thiserror = { version = "2.0.11", default-features = false }

[build-dependencies]
vergen = { workspace = true, features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si"
] }
